syntax = "proto3";

package kvstore;

option go_package = "github.com/jmulyadi/kv/kv-store/proto;proto";

service KVStore {
  rpc Put(PutRequest) returns (PutResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message PutRequest {
  string key = 1;
  string value = 2;
  bool is_replica = 3;
}

message PutResponse {
  string message = 1;
}

message GetRequest {
  string key = 1;
  bool is_replica = 2;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

message DeleteRequest {
  string key = 1;
  bool is_replica = 2;
}

message DeleteResponse {
  string message = 1;
}
